syntax = "proto3";

package demo;

enum StatusCode {
    SUCCESS                     = 0;
    ERROR                       = 1; // Unspecific error without further information
    ERROR_UNAUTHORIZED          = 2;
    ERROR_NOT_IMPLEMENTED       = 3;
    ERROR_INVALID_ARGUMENT      = 4;
    ERROR_ALREADY_EXISTS        = 5;
    ERROR_INTERNAL              = 6;
}

message Status {
      StatusCode code           = 1;
      string message            = 2; // optional message for further information
}
